--- a/lessons/swc-db/tutorial.html
+++ b/lessons/swc-db/tutorial.html
@@ -16,7 +16,7 @@ order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "gr
 </section>
 
 <section id="s:db:select">
-  <h2>{% include guide-db/select/title.md %}</h2>
+  <h2>Selecting</h2>
   <h3>Objectives</h3>
   {% include guide-db/select/objectives.html %}
   <h3>Lesson</h3>
@@ -28,7 +28,7 @@ order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "gr
 </section>
 
 <section id="s:db:distinct">
-  <h2>{% include guide-db/distinct/title.md %}</h2>
+  <h2>Removing Duplicates</h2>
   <h3>Objectives</h3>
   {% include guide-db/distinct/objectives.html %}
   <h3>Lesson</h3>
@@ -40,7 +40,7 @@ order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "gr
 </section>
 
 <section id="s:db:filter">
-  <h2>{% include guide-db/filter/title.md %}</h2>
+  <h2>Filtering</h2>
   <h3>Objectives</h3>
   {% include guide-db/filter/objectives.html %}
   <h3>Lesson</h3>
@@ -52,7 +52,7 @@ order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "gr
 </section>
 
 <section id="s:db:calc">
-  <h2>{% include guide-db/calc/title.md %}</h2>
+  <h2>Calculating New Values</h2>
   <h3>Objectives</h3>
   {% include guide-db/calc/objectives.html %}
   <h3>Lesson</h3>
@@ -64,7 +64,7 @@ order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "gr
 </section>
 
 <section id="s:db:sort">
-  <h2>{% include guide-db/sort/title.md %}</h2>
+  <h2>Ordering Results</h2>
   <h3>Objectives</h3>
   {% include guide-db/sort/objectives.html %}
   <h3>Lesson</h3>
@@ -76,7 +76,7 @@ order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "gr
 </section>
 
 <section id="s:db:null">
-  <h2>{% include guide-db/null/title.md %}</h2>
+  <h2>Missing Data</h2>
   <h3>Objectives</h3>
   {% include guide-db/null/objectives.html %}
   <h3>Lesson</h3>
@@ -88,7 +88,7 @@ order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "gr
 </section>
 
 <section id="s:db:aggregate">
-  <h2>{% include guide-db/aggregate/title.md %}</h2>
+  <h2>Aggregation</h2>
   <h3>Objectives</h3>
   {% include guide-db/aggregate/objectives.html %}
   <h3>Lesson</h3>
@@ -100,7 +100,7 @@ order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "gr
 </section>
 
 <section id="s:db:grouping">
-  <h2>{% include guide-db/grouping/title.md %}</h2>
+  <h2>Grouping</h2>
   <h3>Objectives</h3>
   {% include guide-db/grouping/objectives.html %}
   <h3>Lesson</h3>
@@ -112,7 +112,7 @@ order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "gr
 </section>
 
 <section id="s:db:join">
-  <h2>{% include guide-db/join/title.md %}</h2>
+  <h2>Combining Data</h2>
   <h3>Objectives</h3>
   {% include guide-db/join/objectives.html %}
   <h3>Lesson</h3>
@@ -124,7 +124,7 @@ order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "gr
 </section>
 
 <section id="s:db:create">
-  <h2>{% include guide-db/create/title.md %}</h2>
+  <h2>Creating and Modifying Tables</h2>
   <h3>Objectives</h3>
   {% include guide-db/create/objectives.html %}
   <h3>Lesson</h3>
@@ -136,7 +136,7 @@ order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "gr
 </section>
 
 <section id="s:db:transactions">
-  <h2>{% include guide-db/transactions/title.md %}</h2>
+  <h2>Transactions</h2>
   <h3>Objectives</h3>
   {% include guide-db/transactions/objectives.html %}
   <h3>Lesson</h3>
@@ -148,7 +148,7 @@ order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "gr
 </section>
 
 <section id="s:db:programming">
-  <h2>{% include guide-db/programming/title.md %}</h2>
+  <h2>Programming with Databases</h2>
   <h3>Objectives</h3>
   {% include guide-db/programming/objectives.html %}
   <h3>Lesson</h3>
