--- a/lessons/swc-invperc/tutorial.html
+++ b/lessons/swc-invperc/tutorial.html
@@ -16,7 +16,7 @@ order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "ref
 </section>
 
 <section id="s:invperc:grid">
-  <h2>{% include guide-invperc/grid/title.md %}</h2>
+  <h2>The Grid</h2>
   <h3>Objectives</h3>
   {% include guide-invperc/grid/objectives.html %}
   <h3>Lesson</h3>
@@ -28,7 +28,7 @@ order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "ref
 </section>
 
 <section id="s:invperc:alias">
-  <h2>{% include guide-invperc/alias/title.md %}</h2>
+  <h2>Aliasing</h2>
   <h3>Objectives</h3>
   {% include guide-invperc/alias/objectives.html %}
   <h3>Lesson</h3>
@@ -40,7 +40,7 @@ order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "ref
 </section>
 
 <section id="s:invperc:random">
-  <h2>{% include guide-invperc/random/title.md %}</h2>
+  <h2>Randomness</h2>
   <h3>Objectives</h3>
   {% include guide-invperc/random/objectives.html %}
   <h3>Lesson</h3>
@@ -52,7 +52,7 @@ order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "ref
 </section>
 
 <section id="s:invperc:neighbors">
-  <h2>{% include guide-invperc/neighbors/title.md %}</h2>
+  <h2>Neighbors</h2>
   <h3>Objectives</h3>
   {% include guide-invperc/neighbors/objectives.html %}
   <h3>Lesson</h3>
@@ -64,7 +64,7 @@ order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "ref
 </section>
 
 <section id="s:invperc:ties">
-  <h2>{% include guide-invperc/ties/title.md %}</h2>
+  <h2>Putting It All Together</h2>
   <h3>Objectives</h3>
   {% include guide-invperc/ties/objectives.html %}
   <h3>Lesson</h3>
@@ -76,7 +76,7 @@ order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "ref
 </section>
 
 <section id="s:invperc:assembly">
-  <h2>{% include guide-invperc/assembly/title.md %}</h2>
+  <h2>Assembly</h2>
   <h3>Objectives</h3>
   {% include guide-invperc/assembly/objectives.html %}
   <h3>Lesson</h3>
@@ -88,7 +88,7 @@ order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "ref
 </section>
 
 <section id="s:invperc:bugs">
-  <h2>{% include guide-invperc/bugs/title.md %}</h2>
+  <h2>Bugs</h2>
   <h3>Objectives</h3>
   {% include guide-invperc/bugs/objectives.html %}
   <h3>Lesson</h3>
@@ -100,7 +100,7 @@ order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "ref
 </section>
 
 <section id="s:invperc:refactor">
-  <h2>{% include guide-invperc/refactor/title.md %}</h2>
+  <h2>Refactoring</h2>
   <h3>Objectives</h3>
   {% include guide-invperc/refactor/objectives.html %}
   <h3>Lesson</h3>
@@ -112,7 +112,7 @@ order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "ref
 </section>
 
 <section id="s:invperc:test">
-  <h2>{% include guide-invperc/test/title.md %}</h2>
+  <h2>Test</h2>
   <h3>Objectives</h3>
   {% include guide-invperc/test/objectives.html %}
   <h3>Lesson</h3>
@@ -124,7 +124,7 @@ order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "ref
 </section>
 
 <section id="s:invperc:perf">
-  <h2>{% include guide-invperc/perf/title.md %}</h2>
+  <h2>Performance</h2>
   <h3>Objectives</h3>
   {% include guide-invperc/perf/objectives.html %}
   <h3>Lesson</h3>
@@ -136,7 +136,7 @@ order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "ref
 </section>
 
 <section id="s:invperc:profile">
-  <h2>{% include guide-invperc/profile/title.md %}</h2>
+  <h2>Profiling</h2>
   <h3>Objectives</h3>
   {% include guide-invperc/profile/objectives.html %}
   <h3>Lesson</h3>
@@ -148,7 +148,7 @@ order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "ref
 </section>
 
 <section id="s:invperc:lazy">
-  <h2>{% include guide-invperc/lazy/title.md %}</h2>
+  <h2>A New Beginning</h2>
   <h3>Objectives</h3>
   {% include guide-invperc/lazy/objectives.html %}
   <h3>Lesson</h3>
@@ -160,7 +160,7 @@ order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "ref
 </section>
 
 <section id="s:invperc:lifecycle">
-  <h2>{% include guide-invperc/lifecycle/title.md %}</h2>
+  <h2>The Bigger Picture</h2>
   <h3>Objectives</h3>
   {% include guide-invperc/lifecycle/objectives.html %}
   <h3>Lesson</h3>
