--- a/lessons/swc-setdict/tutorial.html
+++ b/lessons/swc-setdict/tutorial.html
@@ -17,7 +17,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 </section>
 
 <section id="s:setdict:sets">
-  <h2>{% include guide-setdict/sets/title.md %}</h2>
+  <h2>Sets</h2>
   <p><a href="setdict-sets.ipynb">Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/sets/objectives.html %}
@@ -30,7 +30,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 </section>
 
 <section id="s:setdict:storage">
-  <h2>{% include guide-setdict/storage/title.md %}</h2>
+  <h2>Storage</h2>
   <p><a href="setdict-storage.ipynb">Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/storage/objectives.html %}
@@ -43,7 +43,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 </section>
 
 <section id="s:setdict:dict">
-  <h2>{% include guide-setdict/dict/title.md %}</h2>
+  <h2>Dictionaries</h2>
   <p><a href="setdict-dict.ipynb">Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/dict/objectives.html %}
@@ -57,7 +57,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 
 <section id="s:setdict:aggregate">
   <p><a href="setdict-aggregate.ipynb">Notebook</a></p>
-  <h2>{% include guide-setdict/aggregate/title.md %}</h2>
+  <h2>Aggregation</h2>
   <h3>Objectives</h3>
   {% include guide-setdict/aggregate/objectives.html %}
   <h3>Lesson</h3>
@@ -69,7 +69,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 </section>
 
 <section id="s:setdict:nanotech">
-  <h2>{% include guide-setdict/nanotech/title.md %}</h2>
+  <h2>Nanotech Inventory</h2>
   <p><a href="setdict-nanotech.ipynb">Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/nanotech/objectives.html %}
@@ -82,7 +82,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 </section>
 
 <section id="s:setdict:json">
-  <h2>{% include guide-setdict/json/title.md %}</h2>
+  <h2>JSON</h2>
   <p><a href="setdict-json.ipynb">Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/json/objectives.html %}
@@ -95,7 +95,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 </section>
 
 <section id="s:setdict:phylotree">
-  <h2>{% include guide-setdict/phylotree/title.md %}</h2>
+  <h2>Phylogenetic Trees</h2>
   <h3>Objectives</h3>
   {% include guide-setdict/phylotree/objectives.html %}
   <h3>Lesson</h3>
