--- a/lessons/swc-shell/tutorial.html
+++ b/lessons/swc-shell/tutorial.html
@@ -15,7 +15,7 @@ order: ["intro", "filedir", "create", "wildcard", "pipefilter", "loop", "scripts
 </section>
 
 <section id="s:shell:intro">
-  <h2>{% include guide-shell/intro/title.md %}</h2>
+  <h2>What and Why</h2>
   <h3>Objectives</h3>
   {% include guide-shell/intro/objectives.html %}
   <h3>Lesson</h3>
@@ -25,7 +25,7 @@ order: ["intro", "filedir", "create", "wildcard", "pipefilter", "loop", "scripts
 </section>
 
 <section id="s:shell:filedir">
-  <h2>{% include guide-shell/filedir/title.md %}</h2>
+  <h2>Files and Directories</h2>
   <h3>Objectives</h3>
   {% include guide-shell/filedir/objectives.html %}
   <h3>Lesson</h3>
@@ -37,7 +37,7 @@ order: ["intro", "filedir", "create", "wildcard", "pipefilter", "loop", "scripts
 </section>
 
 <section id="s:shell:create">
-  <h2>{% include guide-shell/create/title.md %}</h2>
+  <h2>Creating Things</h2>
   <h3>Objectives</h3>
   {% include guide-shell/create/objectives.html %}
   <h3>Lesson</h3>
@@ -49,7 +49,7 @@ order: ["intro", "filedir", "create", "wildcard", "pipefilter", "loop", "scripts
 </section>
 
 <section id="s:shell:wildcard">
-  <h2>{% include guide-shell/wildcard/title.md %}</h2>
+  <h2>Wildcards</h2>
   <h3>Objectives</h3>
   {% include guide-shell/wildcard/objectives.html %}
   <h3>Lesson</h3>
@@ -61,7 +61,7 @@ order: ["intro", "filedir", "create", "wildcard", "pipefilter", "loop", "scripts
 </section>
 
 <section id="s:shell:pipefilter">
-  <h2>{% include guide-shell/pipefilter/title.md %}</h2>
+  <h2>Pipes and Filters</h2>
   <h3>Objectives</h3>
   {% include guide-shell/pipefilter/objectives.html %}
   <h3>Lesson</h3>
@@ -73,7 +73,7 @@ order: ["intro", "filedir", "create", "wildcard", "pipefilter", "loop", "scripts
 </section>
 
 <section id="s:shell:loop">
-  <h2>{% include guide-shell/loop/title.md %}</h2>
+  <h2>Loops</h2>
   <h3>Objectives</h3>
   {% include guide-shell/loop/objectives.html %}
   <h3>Lesson</h3>
@@ -85,7 +85,7 @@ order: ["intro", "filedir", "create", "wildcard", "pipefilter", "loop", "scripts
 </section>
 
 <section id="s:shell:scripts">
-  <h2>{% include guide-shell/scripts/title.md %}</h2>
+  <h2>Shell Scripts</h2>
   <h3>Objectives</h3>
   {% include guide-shell/scripts/objectives.html %}
   <h3>Lesson</h3>
@@ -97,7 +97,7 @@ order: ["intro", "filedir", "create", "wildcard", "pipefilter", "loop", "scripts
 </section>
 
 <section id="s:shell:find">
-  <h2>{% include guide-shell/find/title.md %}</h2>
+  <h2>Finding Things</h2>
   <h3>Objectives</h3>
   {% include guide-shell/find/objectives.html %}
   <h3>Lesson</h3>
