--- a/lessons/swc-web/tutorial.html
+++ b/lessons/swc-web/tutorial.html
@@ -16,7 +16,7 @@ order: ["history"]
 </section>
 
 <section id="s:web:history">
-  <h2>{% include guide-web/history/title.md %}</h2>
+  <h2>How We Got Here</h2>
   <h3>Objectives</h3>
   {% include guide-web/history/objectives.html %}
   <h3>Lesson</h3>
@@ -28,7 +28,7 @@ order: ["history"]
 </section>
 
 <section id="s:web:formatting">
-  <h2>{% include guide-web/formatting/title.md %}</h2>
+  <h2>Formatting Rules</h2>
   <h3>Objectives</h3>
   {% include guide-web/formatting/objectives.html %}
   <h3>Lesson</h3>
@@ -40,7 +40,7 @@ order: ["history"]
 </section>
 
 <section id="s:web:attributes">
-  <h2>{% include guide-web/attributes/title.md %}</h2>
+  <h2>Attributes</h2>
   <h3>Objectives</h3>
   {% include guide-web/attributes/objectives.html %}
   <h3>Lesson</h3>
@@ -52,7 +52,7 @@ order: ["history"]
 </section>
 
 <section id="s:web:morehtml">
-  <h2>{% include guide-web/morehtml/title.md %}</h2>
+  <h2>More HTML</h2>
   <h3>Objectives</h3>
   {% include guide-web/morehtml/objectives.html %}
   <h3>Lesson</h3>
@@ -64,7 +64,7 @@ order: ["history"]
 </section>
 
 <section id="s:web:templating">
-  <h2>{% include guide-web/templating/title.md %}</h2>
+  <h2>Creating Documents</h2>
   <h3>Objectives</h3>
   {% include guide-web/templating/objectives.html %}
   <h3>Lesson</h3>
@@ -76,7 +76,7 @@ order: ["history"]
 </section>
 
 <section id="s:web:http">
-  <h2>{% include guide-web/http/title.md %}</h2>
+  <h2>How the Web Works</h2>
   <h3>Objectives</h3>
   {% include guide-web/http/objectives.html %}
   <h3>Lesson</h3>
@@ -88,7 +88,7 @@ order: ["history"]
 </section>
 
 <section id="s:web:client">
-  <h2>{% include guide-web/client/title.md %}</h2>
+  <h2>Getting Data</h2>
   <h3>Objectives</h3>
   {% include guide-web/client/objectives.html %}
   <h3>Lesson</h3>
@@ -100,7 +100,7 @@ order: ["history"]
 </section>
 
 <section id="s:web:server">
-  <h2>{% include guide-web/server/title.md %}</h2>
+  <h2>Providing Data</h2>
   <h3>Objectives</h3>
   {% include guide-web/server/objectives.html %}
   <h3>Lesson</h3>
@@ -112,7 +112,7 @@ order: ["history"]
 </section>
 
 <section id="s:web:index">
-  <h2>{% include guide-web/index/title.md %}</h2>
+  <h2>Creating an Index</h2>
   <h3>Objectives</h3>
   {% include guide-web/index/objectives.html %}
   <h3>Lesson</h3>
@@ -124,7 +124,7 @@ order: ["history"]
 </section>
 
 <section id="s:web:syndicate">
-  <h2>{% include guide-web/syndicate/title.md %}</h2>
+  <h2>Syndicating Data</h2>
   <h3>Objectives</h3>
   {% include guide-web/syndicate/objectives.html %}
   <h3>Lesson</h3>
