changed breaks info

--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>08:00 - 09:15</td> <td>Introdução + Rstudio</td> </tr>
-      <tr> <td>09:15 - 9:30</td> <td>Intervalo para café/chá</td> </tr>
+      <tr> <td>09:15 - 9:30</td> <td>Intervalo</td> </tr>
       <tr> <td>09:30 - 12:00</td> <td>Funções em R</td> </tr>
       <tr> <td><em>12:00 - 13:00</em></td> <td><em>Intervalo de almoço</em></td> </tr>
       <tr> <td>13:00 - 14:00</td> <td>Organização de projetos</td> </tr>
       <tr> <td>14:00 - 15:15</td> <td>Estrutura de controle</td> </tr>
-      <tr> <td><em>15:15 - 15:30</em></td> <td><em>Café/chá da tarde</em></td> </tr>
+      <tr> <td><em>15:15 - 15:30</em></td> <td><em>Intervalo</em></td> </tr>
       <tr> <td>15:30 - 17:00</td> <td>Repetindo padrões (plyr)</td> </tr>
       <tr> <td>17:00 - 17:30</td> <td>Discussão</td> </tr>
     </table>
@@ -127,11 +127,11 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>08:00 - 9:30</td> <td>Teste de funções</td> </tr>
-      <tr> <td>09:30 - 9:45</td> <td>Intervalo para café/chá</td> </tr>
+      <tr> <td>09:30 - 9:45</td> <td>Intervalo</td> </tr>
       <tr> <td>09:45 - 12:00</td> <td>Programando em Unix Shell (básico)</td> </tr>
       <tr> <td><em>12:00 - 13:00</em></td> <td><em>Intervalo de almoço</em></td> </tr>
       <tr> <td>13:00 - 15:00</td> <td>Controle de versão com git</td> </tr>
-      <tr> <td><em>15:00 - 15:15</em></td> <td><em>Café/chá da tarde</em></td> </tr>
+      <tr> <td><em>15:00 - 15:15</em></td> <td><em>Intervalo</em></td> </tr>
       <tr> <td>15:15 - 16:00</td> <td>Exercícios com GitHub</td> </tr>
       <tr> <td>16:00 - 17:00</td> <td>Reproducibilidade com <em>knitr</em></td> </tr>
       <tr> <td>17:00 - 17:30</td> <td>Encerramento</td> </tr>
