translated day on schedule. closes #4

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
 
 <div class="row-fluid">
   <div class="span6">
-    <h3>Day 1</h3>
+    <h3>Dia 1</h3>
     <table class="table table-striped">
       <tr> <td>08:00 - 09:15</td> <td>Introdução + Rstudio</td> </tr>
       <tr> <td>09:15 - 9:30</td> <td>Intervalo</td> </tr>
@@ -124,7 +124,7 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
     </table>
   </div>
   <div class="span6">
-    <h3>Day 2</h3>
+    <h3>Dia 2</h3>
     <table class="table table-striped">
       <tr> <td>08:00 - 9:30</td> <td>Teste de funções</td> </tr>
       <tr> <td>09:30 - 9:45</td> <td>Intervalo</td> </tr>
