small fixes to main page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
   the pitch.
 -->
 <p>
-  Este curso intensivo de 2 dias do <a href="{{site.swc_site}}">Software Carpentry</a> vai introduzir os participantes para uma variedade de habilidades de computação que visam torná-los mais produtivos e eficientes em seu trabalho. Boa parte do foco lidará com aprimoramentos de escrita de programação usando a linguagem R como exemplo, mas também incluirá tópicos como Unix shell, controle de versão em git e reproducibilidade. O curso não está projetado para ensinar os alunos a calcular as estatísticas específicas em R (embora alguns exemplos básicos serão cobertos). O conteúdo está focado em conceitos amplos de programação que podem ser adotados em diferentes ambientes. Os participantes serão encorajados tanto para ajudar um ao outro, e para aplicar o que aprenderam com seus próprios problemas de pesquisa durante e entre as sessões.
+  Este curso intensivo de 2 dias do <a href="{{site.swc_site}}">Software Carpentry</a> vai introduzir aos participantes uma variedade de habilidades de computação que visam torná-los mais produtivos e eficientes em seu trabalho. Boa parte do foco lidará com aprimoramentos de escrita de programação usando a linguagem R como exemplo, mas também incluirá tópicos como Unix Shell, controle de versão em git e reproducibilidade. O curso não está projetado para ensinar os alunos a calcular as estatísticas específicas em R (embora alguns exemplos básicos serão cobertos). O conteúdo está focado em conceitos amplos de programação que podem ser adotados em diferentes ambientes. Espera-se que os participantes ajudem uns aos outros, e que apliquem o que aprenderam com seus próprios problemas de pesquisa durante e entre as sessões.
 </p>
 
 <!--
@@ -52,7 +52,7 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
 -->
 <p>
   <strong>Quem:</strong>
-    Este curso foi estruturado para alunos de pós-graduação e pesquisadores das Ciências a Vida. Note, por favor, que este curso não é um curso introdutório de R; o participante precisará de um conhecimento básico da linguagem R para que possa aproveitar ao máximo o conteúdo do curso. Entretanto, por favro não deixe que isso o assunte - se você gostaria de participar mas nunca utilizou R antes, você poderá, antes do curso, estudar o material do curso introdutório NiceR Code que está disponível online: <a href="http://nicercode.github.io/modules/#introduction-to-r-macquarie-university-2013">'Day 1' of the NiceR code 'Introduction to R'</a>. Esse deve deixá-lo pronto para o nosso curso!
+    Este curso foi estruturado para alunos de pós-graduação e pesquisadores das Ciências a Vida. Note, por favor, que este curso não é um curso introdutório de R; o participante precisará de um conhecimento básico da linguagem R para que possa aproveitar ao máximo o conteúdo do curso. Entretanto, por favor não deixe que isso o assunte - se você gostaria de participar mas nunca utilizou R antes, você poderá, antes do curso, estudar o material do curso introdutório NiceR Code que está disponível online: <a href="http://nicercode.github.io/modules/#introduction-to-r-macquarie-university-2013">'Day 1' of the NiceR code 'Introduction to R'</a>. Esse deve deixá-lo pronto para o nosso curso!
 </p>
 
 <!--
@@ -76,7 +76,7 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
   Modify the block below if there are any special requirements.
 -->
 <p>
-  <strong>Requirements:</strong> TODOS os participantes deverão trazer 
+  <strong>Pré-requisitos:</strong> TODOS os participantes deverão trazer 
   consigo um laptop com uma série de programas e pacotes já instalados (listados
   <a href="#setup">abaixo</a>). Esses são necessários para conformar com o 
   <a href="{{site.swc_site}}/conduct.html">Código de Conduta</a>
@@ -113,7 +113,7 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
     <h3>Dia 1</h3>
     <table class="table table-striped">
       <tr> <td>08:00 - 09:15</td> <td>Introdução + Rstudio</td> </tr>
-      <tr> <td>09:15 - 9:30</td> <td>Intervalo</td> </tr>
+      <tr> <td>09:15 - 9:30</td> <td><em>Intervalo</em></td> </tr>
       <tr> <td>09:30 - 12:00</td> <td>Funções em R</td> </tr>
       <tr> <td><em>12:00 - 13:00</em></td> <td><em>Intervalo de almoço</em></td> </tr>
       <tr> <td>13:00 - 14:00</td> <td>Organização de projetos</td> </tr>
@@ -127,7 +127,7 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
     <h3>Dia 2</h3>
     <table class="table table-striped">
       <tr> <td>08:00 - 9:30</td> <td>Teste de funções</td> </tr>
-      <tr> <td>09:30 - 9:45</td> <td>Intervalo</td> </tr>
+      <tr> <td>09:30 - 9:45</td> <td><em>Intervalo</em></td> </tr>
       <tr> <td>09:45 - 12:00</td> <td>Programando em Unix Shell (básico)</td> </tr>
       <tr> <td><em>12:00 - 13:00</em></td> <td><em>Intervalo de almoço</em></td> </tr>
       <tr> <td>13:00 - 15:00</td> <td>Controle de versão com git</td> </tr>
@@ -202,7 +202,7 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
       <li>Arquivos e diretórios</li>
       <li>Histórico e <em>tab completion</em></li>
       <li>Encontrando coisas</li>
-      <li><a href="{{site.swc_lessons}}/ref/01-shell.html">Página de referência...</a></li>
+      <li><a href="{{site.swc_lessons}}/ref/01-Shell.html">Página de referência...</a></li>
     </ul>
   </div>
   <div class="span6">
@@ -232,7 +232,7 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
   'tools/check' as well.
 -->
 
-<h2 id="setup">Configurações/requerimentos</h2>
+<h2 id="setup">Configurações/pré-requisitos</h2>
 
 <div> <!-- Start of 'editor' section. -->
   <h3>Editor de Texto</h3>
@@ -244,7 +244,7 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
     Linux é geralmente o Vim, que não é considerado muito intuitivo. Se você 
     encontrar-se preso acidentalmente nele, tente digitar a tecla "Esc", 
     seguido por ':q!' (dois pontos, 'q' minúsculo e ponto de exclamação),
-    em seguida, aprtando Enter (ou retorno) para voltar para o shell.
+    em seguida, apertando Enter (ou retorno) para voltar para o Shell.
   </p>
 
   <div class="row-fluid">
@@ -283,11 +283,11 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
   </div>
 </div> <!-- End of 'editor' section. -->
 
-<div> <!-- Start of 'shell' section. -->
+<div> <!-- Start of 'Shell' section. -->
   <h3>Bash Shell</h3>
 
   <p>
-    Bash é um tipo de linguagem shell de uso comum que lhe dá o poder de 
+    Bash é um tipo de linguagem Shell de uso comum que lhe dá o poder de 
     fazer tarefas simples mais rapidamente.
   </p>
 
@@ -307,7 +307,7 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
           Baixe o <a href="{{site.swc_installer}}">instalador</a>.
 	</li>
 	<li>
-        Se o arquivo abrir diretamente no browser 
+        Se o arquivo abrir diretamente no navegador 
         selecione <strong>Arquivo&rarr;Salvar como</strong> para baixá-lo
         para seu computador.
 	</li>
@@ -319,9 +319,9 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
     <div class="span4">
       <h4>Mac OS X</h4>
       <p>
-	O tipo de shell padrão em todas versões do Mac OS X é o bash, 
+	O tipo de Shell padrão em todas versões do Mac OS X é o Bash, 
   portanto não há necessidade de instalar nada. Você pode acessar
-  o bash diretamente do seu Terminal (encontrado em
+  o Bash diretamente do seu Terminal (encontrado em
 	<code>/Applicativos/Utilidades</code>). Para sua conveniência, 
   recomendamos que você mantenha seu Terminal disponível no dock
   durante o workshop.
@@ -330,14 +330,14 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
     <div class="span4">
       <h4>Linux</h4>
       <p>
-	O tipo de shell padrão é geralmente <code>bash</code>, mas se sua
-	máquina é configurada diferentemente, você poderá rodar bash abrindo seu
-	terminal e digitando <code>bash</code>. Não há, portanto, necessidade
+	O tipo de Shell padrão é geralmente <code>Bash</code>, mas se sua
+	máquina é configurada diferentemente, você poderá rodar Bash abrindo seu
+	Terminal e digitando <code>Bash</code>. Não há, portanto, necessidade
   de instalar nada.
       </p>
     </div>
   </div>
-<div> <!-- End of 'shell' section. -->  
+<div> <!-- End of 'Shell' section. -->  
 
 <div> <!-- Start of 'Git' section. -->
   <h3>Git</h3>
@@ -347,7 +347,7 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
     rastrear quem, o que e quando mudanças foram feitas em arquivos
     e possui opções que facilitam a atualização de uma versão compartilhada
     ou pública do seu código
-    on <a href="https://github.com/">github.com</a>.
+    em <a href="https://github.com/">github.com</a>.
   </p>
 
   <div class="row-fluid">
@@ -407,7 +407,7 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
     <div class="span4">
       <h4>Mac OS X</h4>
       <p>
-	Instale o R bbaixando e rodando
+	Instale o R baixando e rodando
 	<a href="http://cran.r-project.org/bin/macosx/R-latest.pkg">este arquivo .pkg</a>
 	disponível no <a href="http://cran.r-project.org/index.html">CRAN</a>.
 	Além disso, por favor instale o
@@ -417,7 +417,7 @@ etherpad: https://etherpad.mozilla.org/SWC-UFSC
     <div class="span4">
       <h4>Linux</h4>
       <p>
-	You pode baixar os arquivos binários para sua distribuição particular
+	Você pode baixar os arquivos binários para sua distribuição particular
 	em <a href="http://cran.r-project.org/index.html">CRAN</a>. Ou
 	você pode utilizar seu "package manager" (e.g. para Debian/Ubuntu
 	rode <code>sudo apt-get install r-base</code> e para Fedora rode
