--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: workshop
 root: .
 venue: Universidade Federal de Santa Catarina 
 address: Auditório do BEG, CCB. Entrada para o campus fica na esquina entre a Rua Professor Lauro Caldeira de Andrara e a Rua João Pio Duarte Silva - entrada do bairro Córrego Grande). Nos prédios do CCB (MIP), procure o segundo bloco, andar térreo, corredor da direita, última sala do corredor
-country: Brasil
+country: Brazil
 latlng: -27.59803,-48.51514
 humandate: Dez 11-12, 2014
 humantime: 8:00 am - 5:30 pm
