Add control flow lesson

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -24,10 +24,15 @@ raw: raw.github.com/swcarpentry/bc/gh-pages
       We will also cover some basics of R at the same time.
     </dd>
 
-    <dt><a href="30-projects/index.html">Projects</a></dt>
+    <dt><a href="20-projects/index.html">Projects</a></dt>
     <dd>
       Organise your files into a project and start thinking about
       workflows.
+    </dd>
+
+    <dt><a href="30-control-flow/index.html">Control Flow</a></dt>
+    <dd>
+      Conditional statements, automating repetitive tasks.
     </dd>
 
     <dt><a href="40-repeating/index.html">Repeating things</a></dt>
